# backtester

./: .dockerignore  .gitignore  Dockerfile  docker-compose.prd.yaml  docker-compose.yaml  pyproject.toml  readme.md  strategy_report.html
.github/workflows/: build-push-deploy.yaml  docker-push-and-deploy.yaml  docker-push.yaml
src/backtester/: cli.py  config.yaml  worker.py
src/backtester/data/: csv_data_handler.py  data_handler.py  live_data_handler.py  news_data_handler.py  yf_data_handler.py
src/backtester/enums/: direction_type.py  order_type.py  signal_type.py  st_job_status.py  st_session_status.py
src/backtester/events/: event.py  fill_event.py  market_event.py  order_event.py  signal_event.py
src/backtester/exceptions/: negative_cash_exception.py
src/backtester/execution/: execution_handler.py  simulated_execution_handler.py
src/backtester/metrics/: performance.py
src/backtester/metrics/dashboard/: _util.py  overview.py  streamlit_app.py
src/backtester/portfolios/: naive_portfolio.py  portfolio.py
src/backtester/protocols/: on_interval_protocol.py
src/backtester/strategies/: buy_and_hold_simple.py  moving_average_crossover.py  strategy.py  z_score_sentiment.py
src/backtester/util/: bar_aggregator.py  bar_manager.py  util.py
src/backtester/util/position_sizer/: atr_position_sizer.py  no_position_sizer.py  position_sizer.py
tests/: test_cli.py  test_integration.py  test_live_integration.py
tests/data/: test_csv_data_handler.py
tests/execution/: test_execution_handler.py  test_simulated_execution_handler.py
tests/metrics/dashboard/: test_utils.py
tests/portfolios/: test_naive_portfolio.py
tests/strategies/: test_buy_and_hold_simple.py  test_moving_average_crossover.py
tests/test_data/: BTC-USD_1d.csv  BTC-USD_1m.csv  ETH-USD_1d.csv  ETH-USD_1m.csv  test_config.txt  test_config.yaml  test_config_live.yaml  test_config_yf.yaml  test_equity_curve_live.csv  test_equity_curve_yf.csv
tests/util/position_sizer/: test_atr_position_sizer.py
tests/util/risk_manager/: test_simple_risk_manager.py
(+11 files in other folders)
