[tool.poetry]
name = "backtester"
version = "0.1.0"
description = "A simple event-driven backtester"
authors = ["ngmysamuel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.17.4"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
backtester = "backtester.cli:app"