[tool.poetry]
name = "backtester"
version = "0.1.0"
description = "A simple event-driven backtester"
authors = ["ngmysamuel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.17.4"
pandas = "^2.3.2"
yfinance = "^0.2.65"
pyyaml = "^6.0.2"
quantstats = "^0.0.77"
ipython = "^9.5.0"
streamlit = "^1.50.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
backtester = "backtester.cli:app"

[tool.ruff]
indent-width = 2