[tool.poetry]
name = "backtester"
version = "0.1.0"
description = "A simple event-driven backtester"
authors = ["ngmysamuel"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
typer = "^0.17.4"
pandas = "^2.3.2"
yfinance = "^0.2.65"
pyyaml = "^6.0.2"
quantstats = "^0.0.77"
ipython = "^9.5.0"
streamlit = "^1.50.0"
millify = "^0.1.1"
plotly = "^6.3.0"
bidask = "^2.1.0"
mypy = "^1.19.1"
pandas-stubs = "^2.3.3.251219"
transformers = "^4.57.3"
torch = "^2.9.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
backtester = "backtester.cli:app"

[tool.ruff]
indent-width = 4
line-length = 250

[tool.mypy]
strict = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
    "live_integration: marks tests as live system integration tests requiring network access"
]